; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/versatile/extr_versatile_pci.c_versatile_pci_activate_resource.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/versatile/extr_versatile_pci.c_versatile_pci_activate_resource.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.resource = type { i32 }

@fdtbus_bs_tag = common dso_local global i32 0, align 4
@ENXIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, i32, %struct.resource*)* @versatile_pci_activate_resource to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @versatile_pci_activate_resource(i32 %0, i32 %1, i32 %2, i32 %3, %struct.resource* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.resource*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store %struct.resource* %4, %struct.resource** %10, align 8
  %13 = load i32, i32* %8, align 4
  switch i32 %13, label %36 [
    i32 128, label %14
    i32 130, label %14
    i32 129, label %28
  ]

14:                                               ; preds = %5, %5
  %15 = load %struct.resource*, %struct.resource** %10, align 8
  %16 = call i32 @rman_get_start(%struct.resource* %15)
  %17 = load %struct.resource*, %struct.resource** %10, align 8
  %18 = call i32 @rman_get_size(%struct.resource* %17)
  %19 = call i32 @pmap_mapdev(i32 %16, i32 %18)
  store i32 %19, i32* %11, align 4
  %20 = load %struct.resource*, %struct.resource** %10, align 8
  %21 = load i32, i32* %11, align 4
  %22 = call i32 @rman_set_bushandle(%struct.resource* %20, i32 %21)
  %23 = load %struct.resource*, %struct.resource** %10, align 8
  %24 = load i32, i32* @fdtbus_bs_tag, align 4
  %25 = call i32 @rman_set_bustag(%struct.resource* %23, i32 %24)
  %26 = load %struct.resource*, %struct.resource** %10, align 8
  %27 = call i32 @rman_activate_resource(%struct.resource* %26)
  store i32 %27, i32* %12, align 4
  br label %38

28:                                               ; preds = %5
  %29 = load i32, i32* %6, align 4
  %30 = call i32 @device_get_parent(i32 %29)
  %31 = load i32, i32* %7, align 4
  %32 = load i32, i32* %8, align 4
  %33 = load i32, i32* %9, align 4
  %34 = load %struct.resource*, %struct.resource** %10, align 8
  %35 = call i32 @BUS_ACTIVATE_RESOURCE(i32 %30, i32 %31, i32 %32, i32 %33, %struct.resource* %34)
  store i32 %35, i32* %12, align 4
  br label %38

36:                                               ; preds = %5
  %37 = load i32, i32* @ENXIO, align 4
  store i32 %37, i32* %12, align 4
  br label %38

38:                                               ; preds = %36, %28, %14
  %39 = load i32, i32* %12, align 4
  ret i32 %39
}

declare dso_local i32 @pmap_mapdev(i32, i32) #1

declare dso_local i32 @rman_get_start(%struct.resource*) #1

declare dso_local i32 @rman_get_size(%struct.resource*) #1

declare dso_local i32 @rman_set_bushandle(%struct.resource*, i32) #1

declare dso_local i32 @rman_set_bustag(%struct.resource*, i32) #1

declare dso_local i32 @rman_activate_resource(%struct.resource*) #1

declare dso_local i32 @BUS_ACTIVATE_RESOURCE(i32, i32, i32, i32, %struct.resource*) #1

declare dso_local i32 @device_get_parent(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
